Dark mode fix

--- a/assets/css/ahmedrangel.css
+++ b/assets/css/ahmedrangel.css
@@ -46,3 +46,7 @@ body, html {
   --bs-progress-bar-bg: var(--primary);
   background-color: var(--muted-bg);
 }
+
+#navbar .iconify {
+  font-size: 30px;
+}
